# MASON

./: README.md  requirements.txt
Results/Output/: mas_humaneval_claude_1.txt  mas_humaneval_claude_2.txt  mas_humaneval_claude_3.txt  mas_humaneval_deepseek_1.txt  mas_humaneval_deepseek_2.txt  mas_humaneval_deepseek_3.txt  mas_humaneval_gemini_1.txt  mas_humaneval_gemini_2.txt  mas_humaneval_gemini_3.txt  mas_humaneval_openai_1.txt  mas_humaneval_openai_2.txt  mas_humaneval_openai_3.txt  mas_mbpp_claude_1.txt  mas_mbpp_claude_2.txt  mas_mbpp_claude_3.txt  mas_mbpp_deepseek_1.txt  mas_mbpp_deepseek_2.txt  mas_mbpp_deepseek_3.txt  mas_mbpp_gemini_1.txt  mas_mbpp_gemini_2.txt  mas_mbpp_gemini_3.txt  mas_mbpp_openai_1.txt  mas_mbpp_openai_2.txt  mas_mbpp_openai_3.txt  single_humaneval_claude_1.txt  single_humaneval_claude_2.txt  single_humaneval_claude_3.txt  single_humaneval_deepseek_1.txt  single_humaneval_deepseek_2.txt  single_humaneval_deepseek_3.txt  single_humaneval_gemini_1.txt  single_humaneval_gemini_2.txt  single_humaneval_gemini_3.txt  single_humaneval_openai_1.txt  single_humaneval_openai_2.txt  single_humaneval_openai_3.txt  single_mbpp_claude_1.txt  single_mbpp_claude_2.txt  single_mbpp_claude_3.txt  single_mbpp_deepseek_1.txt  (+8 more)
mason/: pyvenv.cfg
mason_framework/: README.md  pyproject.toml
mason_framework/src/mason_framework/: crew.py  main.py
mason_framework/src/mason_framework_sample/: crew.py  main.py
mason_framework/src/mason_framework_sample/config/: agents.yaml  tasks.yaml
