[project]
name = "mason_framework"
version = "0.1.0"
description = "mason_framework using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
mason_framework = "mason_framework.main:run"
run_crew = "mason_framework.main:run"
train = "mason_framework.main:train"
replay = "mason_framework.main:replay"
test = "mason_framework.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
